# loreweaver

./: .gitignore  CLAUDE.md  DESIGN_DOC.md  flake.nix  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  dev.db  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: ai_conversations.rs  ai_messages.rs  campaigns.rs  characters.rs  entity_tags.rs  export.rs  heroes.rs  lib.rs  locations.rs  organizations.rs  players.rs  prelude.rs  quests.rs  relationships.rs  seaql_migrations.rs  secrets.rs  sessions.rs  tags.rs  timeline_events.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20251126_000001_create_campaigns.rs  m20251126_000002_create_players.rs  m20251126_000003_create_locations.rs  m20251126_000004_create_characters.rs  m20251126_000005_create_organizations.rs  m20251126_000006_create_quests.rs  m20251126_000007_create_heroes.rs  m20251126_000008_create_sessions.rs  m20251126_000009_create_timeline_events.rs  m20251126_000010_create_secrets.rs  m20251126_000011_create_relationships.rs  m20251126_000012_create_tags.rs  m20251126_000013_create_entity_tags.rs  m20251126_000014_create_search_index.rs  m20251129_000001_create_ai_conversations.rs  m20251129_000002_create_ai_messages.rs  m20251129_000003_add_agent_messages_to_ai_conversations.rs  m20251218_000001_drop_detail_level.rs
src-tauri/scripts/: generate-entities.sh
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai_conversation.rs  campaign.rs  character.rs  hero.rs  location.rs  mod.rs  organization.rs  player.rs  quest.rs  relationship.rs  search.rs  secret.rs  session.rs  tag.rs  timeline.rs  types.rs  validation.rs
src-tauri/src/db/: connection.rs
src-tauri/tests/: campaign_tests.rs  cascade_tests.rs  character_tests.rs  location_tests.rs  relationship_tests.rs  search_tests.rs  tag_tests.rs
src-tauri/tests/common/: database.rs  (+1 more)
(+220 files in other folders)
