[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sea-orm = { version = "1", features = ["with-chrono"] }
serde = { version = "1", features = ["derive"] }
ts-rs = { version = "10", features = ["serde-compat", "uuid-impl", "chrono-impl"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
